--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
+    "request": "^2.88.0",
     "yargs": "^12.0.5"
   }
 }
