--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +15,13 @@
     "express": "^4.16.4",
     "hbs": "^4.0.3",
     "lodash": "^4.17.11",
+    "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "request": "^2.88.0",
+    "tap": "^12.6.0",
     "yargs": "^12.0.5"
   }
 }
