--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parse": "^0.1.0",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "hbs": "^4.0.3",
     "lodash": "^4.17.11",
     "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "request": "^2.88.0",
-    "tap": "^12.6.0",
     "yargs": "^12.0.5"
   }
 }
