--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parse": "^0.1.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "expect": "^24.5.0",
     "express": "^4.16.4",
     "hbs": "^4.0.3",
     "lodash": "^4.17.11",
@@ -23,6 +24,7 @@
     "mysql": "^2.16.0",
     "nodemon": "^1.18.10",
     "request": "^2.88.0",
+    "supertest": "^4.0.2",
     "yargs": "^12.0.5"
   }
 }
