--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cookie-parser": "^1.4.3",
     "expect": "^24.5.0",
     "express": "^4.16.4",
+    "express-formidable": "^1.2.0",
     "hbs": "^4.0.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "mocha": "^6.0.2",
     "mongodb": "^3.1.13",
@@ -25,6 +27,7 @@
     "nodemon": "^1.18.10",
     "request": "^2.88.0",
     "supertest": "^4.0.2",
+    "validator": "^10.11.0",
     "yargs": "^12.0.5"
   }
 }
